--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
   <color name="colorPrimary">#D84315</color>
   <color name="colorPrimaryDark">#BF360C</color>
   <color name="colorAccent">@color/colorPrimary</color>
+
+  <color name="wetasphalt">#34495e</color>
+  <color name="midnightblue">#2c3e50</color>
 </resources>
