--- a/presentation/src/main/res/layout/app_bar_main.xml
+++ b/presentation/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
-  tools:context="com.android.banuu.basketballstattracker.main.MainActivity">
+  tools:context=".main.view.MainActivity">
 
   <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
@@ -21,21 +21,11 @@
 
   </android.support.design.widget.AppBarLayout>
 
-  <include layout="@layout/content_main" />
-
-  <com.github.clans.fab.FloatingActionButton
-    android:id="@+id/main_fab"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|end"
-    android:layout_margin="@dimen/fab_margin"
-    android:src="@mipmap/add_white"
-    app:fab_colorNormal="@color/colorPrimary"
-    app:fab_colorPressed="@color/colorPrimaryDark"
-    app:fab_colorRipple="#66FFFFFF"
-    app:fab_hideAnimation="@anim/fab_scale_down"
-    app:fab_shadowColor="#40000000"
-    app:fab_showAnimation="@anim/fab_scale_up"
-    app:fab_size="normal" />
+  <FrameLayout
+    android:id="@+id/main_frame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipChildren="false"
+    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />
 
 </android.support.design.widget.CoordinatorLayout>
