--- a/presentation/src/main/res/layout/games_view.xml
+++ b/presentation/src/main/res/layout/games_view.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:context=".main.view.MainActivity"
-  tools:showIn="@layout/app_bar_main">
+  android:layout_height="match_parent">
 
-  <include layout="@layout/recyclerview_with_placeholder"/>
+  <include layout="@layout/recyclerview_with_placeholder" />
+
+  <com.github.clans.fab.FloatingActionButton
+    android:id="@+id/main_fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|end"
+    android:layout_margin="@dimen/fab_margin"
+    android:src="@mipmap/add_white"
+    app:fab_colorNormal="@color/colorPrimary"
+    app:fab_colorPressed="@color/colorPrimaryDark"
+    app:fab_colorRipple="#66FFFFFF"
+    app:fab_hideAnimation="@anim/fab_scale_down"
+    app:fab_shadowColor="#40000000"
+    app:fab_showAnimation="@anim/fab_scale_up"
+    app:fab_size="normal" />
 
 </FrameLayout>
