--- a/presentation/src/main/res/layout/main_fragment.xml
+++ b/presentation/src/main/res/layout/main_fragment.xml
@@ -13,8 +13,8 @@
     android:layout_gravity="bottom|end"
     android:layout_margin="@dimen/fab_margin"
     android:src="@mipmap/add_white"
-    app:fab_colorNormal="@color/colorPrimary"
-    app:fab_colorPressed="@color/colorPrimaryDark"
+    app:fab_colorNormal="@color/colorAccent"
+    app:fab_colorPressed="@color/colorAccentDark"
     app:fab_colorRipple="#66FFFFFF"
     app:fab_hideAnimation="@anim/fab_scale_down"
     app:fab_shadowColor="#40000000"
