--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#D84315</color>
-  <color name="colorPrimaryDark">#BF360C</color>
-  <color name="colorAccent">@color/colorPrimary</color>
-
   <color name="wetasphalt">#34495e</color>
   <color name="midnightblue">#2c3e50</color>
+  <color name="alizarin">#e74c3c</color>
+  <color name="pomegrenate">#c0392b</color>
+
+  <!--<color name="colorPrimary">#D84315</color>-->
+  <!--<color name="colorPrimaryDark">#BF360C</color>-->
+  <!--<color name="colorAccent">@color/colorPrimary</color>-->
+
+  <color name="colorPrimary">@color/wetasphalt</color>
+  <color name="colorPrimaryDark">@color/midnightblue</color>
+  <color name="colorAccent">@color/alizarin</color>
+  <color name="colorAccentDark">@color/pomegrenate</color>
 </resources>
