--- a/presentation/src/main/res/layout/main_fragment.xml
+++ b/presentation/src/main/res/layout/main_fragment.xml
@@ -12,7 +12,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|end"
     android:layout_margin="@dimen/fab_margin"
-    android:src="@mipmap/add_white"
+    android:src="@mipmap/ic_add_white"
     app:fab_colorNormal="@color/colorAccent"
     app:fab_colorPressed="@color/colorAccentDark"
     app:fab_colorRipple="#66FFFFFF"
