Initial commit for games activity. I added some new colours, a tab layout, and modified a little bit of the generated code. Note: quite a bit of the generated code need to be removed

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
   <color name="midnightblue">#2c3e50</color>
   <color name="alizarin">#e74c3c</color>
   <color name="pomegrenate">#c0392b</color>
+  <color name="white">#ffffff</color>
+  <color name="emerland">#2ecc71</color>
+  <color name="nephritis">#27ae60</color>
+  <color name="turquoise">#1abc9c</color>
+  <color name="greensea">#16a085</color>
 
   <!--<color name="colorPrimary">#D84315</color>-->
   <!--<color name="colorPrimaryDark">#BF360C</color>-->
