--- a/presentation/src/main/res/layout/activity_game.xml
+++ b/presentation/src/main/res/layout/activity_game.xml
@@ -6,7 +6,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
-  tools:context="com.android.banuu.basketballstattracker.game.GameActivity">
+  tools:context=".game.view.GameActivity">
 
   <android.support.design.widget.AppBarLayout
     android:id="@+id/appbar"
@@ -23,27 +23,20 @@
       app:layout_scrollFlags="scroll|enterAlways"
       app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <android.support.design.widget.TabLayout
-      android:id="@+id/team_tabs"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/tab_height"
-      android:animateLayoutChanges="true"
-      app:tabIndicatorColor="@color/white"
-      app:tabIndicatorHeight="3dp" />
-
   </android.support.design.widget.AppBarLayout>
 
-  <android.support.v4.view.ViewPager
-    android:id="@+id/container"
+  <FrameLayout
+    android:id="@+id/game_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    android:clipChildren="false"
+    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />
 
   <com.github.clans.fab.FloatingActionButton
     android:id="@+id/play_pause_fab"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="bottom|end"
+    android:layout_gravity="bottom|center_horizontal"
     android:layout_margin="@dimen/fab_margin"
     android:src="@mipmap/ic_add_white"
     app:fab_colorNormal="@color/turquoise"
