--- a/presentation/src/main/res/layout/fragment_game.xml
+++ b/presentation/src/main/res/layout/fragment_game.xml
@@ -1,16 +1,190 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:paddingBottom="@dimen/activity_vertical_margin"
-  android:paddingLeft="@dimen/activity_horizontal_margin"
-  android:paddingRight="@dimen/activity_horizontal_margin"
-  android:paddingTop="@dimen/activity_vertical_margin"
-  tools:context="com.android.banuu.basketballstattracker.game.GameActivity$PlaceholderFragment">
+  android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/section_label"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+  <LinearLayout
+    android:layout_width="50dp"
+    android:layout_height="match_parent"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginTop="20dp"
+    android:gravity="top|center_horizontal"
+    android:orientation="vertical">
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:layout_marginTop="20dp"
+    android:gravity="top|center_horizontal"
+    android:orientation="vertical">
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button5"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+    <com.github.clans.fab.FloatingActionButton
+      android:id="@+id/button7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_margin="@dimen/fab_margin"
+      android:src="@mipmap/ic_add_white"
+      app:fab_colorNormal="@color/turquoise"
+      app:fab_colorPressed="@color/greensea"
+      app:fab_colorRipple="#66FFFFFF"
+      app:fab_hideAnimation="@anim/fab_scale_down"
+      app:fab_shadowColor="#40000000"
+      app:fab_showAnimation="@anim/fab_scale_up"
+      app:fab_size="normal" />
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="50dp"
+    android:layout_height="match_parent"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentRight="true"
+    android:layout_marginTop="20dp"
+    android:gravity="top|center_horizontal"
+    android:orientation="vertical">
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+    <include
+      layout="@layout/basket_with_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="20dp" />
+
+  </LinearLayout>
 
 </RelativeLayout>
