--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
   <color name="nephritis">#27ae60</color>
   <color name="turquoise">#1abc9c</color>
   <color name="greensea">#16a085</color>
+  <color name="carrot">#e67e22</color>
+  <color name="pumpkin">#d35400</color>
 
   <!--<color name="colorPrimary">#D84315</color>-->
   <!--<color name="colorPrimaryDark">#BF360C</color>-->
