--- a/presentation/src/main/res/layout/flying_stat.xml
+++ b/presentation/src/main/res/layout/flying_stat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.android.banuu.basketballstattracker.widget.floatable.FloatingLayout
+<com.android.banuu.basketballstattracker.widget.floatable.FlyingLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
@@ -19,4 +19,4 @@
     android:src="@mipmap/ic_face_black"
     android:tint="@color/wetasphalt" />
 
-</com.android.banuu.basketballstattracker.widget.floatable.FloatingLayout>
+</com.android.banuu.basketballstattracker.widget.floatable.FlyingLayout>
