Modify the res of the stat

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
   <color name="greensea">#16a085</color>
   <color name="carrot">#e67e22</color>
   <color name="pumpkin">#d35400</color>
+  <color name="cerulean">#0093d2</color>
 
   <!--<color name="colorPrimary">#D84315</color>-->
   <!--<color name="colorPrimaryDark">#BF360C</color>-->
