--- a/presentation/src/main/res/layout/basket_with_name.xml
+++ b/presentation/src/main/res/layout/basket_with_name.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  android:gravity="center"
   android:orientation="vertical">
 
   <TextView
@@ -20,7 +21,6 @@
     android:id="@+id/basket_pic"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_below="@id/player_name"
     android:layout_gravity="center"
     android:layout_marginBottom="5dp"
     android:contentDescription="@null"
@@ -30,9 +30,6 @@
     android:id="@+id/stats_textview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_below="@id/basket_pic"
     android:ellipsize="end"
     android:gravity="center_horizontal"
     android:lines="2"
@@ -40,4 +37,4 @@
     android:textColor="@color/colorPrimary"
     android:textSize="10sp" />
 
-</RelativeLayout>
+</LinearLayout>
