--- a/presentation/src/main/res/layout/stat.xml
+++ b/presentation/src/main/res/layout/stat.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<TextView android:id="@+id/button1"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/button1"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:background="@drawable/stat_bg"
-  android:textSize="15sp"
   android:gravity="center"
   android:padding="15dp"
+  android:text="FM"
   android:textColor="@color/white"
-  android:text="FM"/>
+  android:textSize="15sp" />
