--- a/presentation/src/main/res/layout/stat.xml
+++ b/presentation/src/main/res/layout/stat.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/button1"
+<TextView android:id="@+id/stat"
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:background="@drawable/stat_bg"
   android:gravity="center"
-  android:padding="15dp"
-  android:text="FM"
+  android:layout_gravity="center"
   android:textColor="@color/white"
-  android:textSize="15sp" />
+  android:textSize="@dimen/stat_textsize" />
