--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
   <dimen name="empty_placeholder_side_padding">26dp</dimen>
   <dimen name="appbar_padding_top">8dp</dimen>
   <dimen name="tab_height">56dp</dimen>
+  <dimen name="stat_radius">50dp</dimen>
+  <dimen name="stat_textsize">15sp</dimen>
 </resources>
