Beautifying the basket with name container

--- a/presentation/src/main/res/layout/basket_with_name.xml
+++ b/presentation/src/main/res/layout/basket_with_name.xml
@@ -2,18 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  android:background="@drawable/basket_bg"
   android:gravity="center"
+  android:minHeight="90dp"
   android:orientation="vertical">
 
   <TextView
     android:id="@+id/player_name"
+    android:paddingLeft="1dp"
+    android:paddingStart="1dp"
+    android:paddingRight="1dp"
+    android:paddingEnd="1dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="top|center_horizontal"
     android:ellipsize="end"
     android:gravity="top|center_horizontal"
     android:lines="1"
-    android:text="PlayerA"
+    android:text="Player Name"
     android:textColor="@color/colorPrimary"
     android:textSize="14sp" />
 
@@ -26,15 +32,11 @@
     android:contentDescription="@null"
     android:src="@mipmap/basket" />
 
-  <TextView
-    android:id="@+id/stats_textview"
-    android:layout_width="match_parent"
+  <LinearLayout
+    android:id="@+id/stats_container"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:ellipsize="end"
-    android:gravity="center_horizontal"
-    android:lines="2"
-    android:text="FA, FA, FM, T, D, O, D, D"
-    android:textColor="@color/colorPrimary"
-    android:textSize="10sp" />
+    android:gravity="center"
+    android:orientation="horizontal" />
 
 </LinearLayout>
