--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
   <color name="carrot">#e67e22</color>
   <color name="pumpkin">#d35400</color>
   <color name="cerulean">#0093d2</color>
+  <color name="grey">#eef4f6</color>
+  <color name="cloud">#ecf0f1</color>
 
   <!--<color name="colorPrimary">#D84315</color>-->
   <!--<color name="colorPrimaryDark">#BF360C</color>-->
