--- a/presentation/src/main/res/layout/fragment_game.xml
+++ b/presentation/src/main/res/layout/fragment_game.xml
@@ -1,10 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/white"
   android:orientation="horizontal">
 
   <LinearLayout
-    android:layout_width="70dp"
+    android:layout_width="80dp"
     android:layout_height="match_parent"
     android:layout_marginLeft="10dp"
     android:layout_marginStart="10dp"
@@ -56,7 +57,7 @@
   </FrameLayout>
 
   <LinearLayout
-    android:layout_width="70dp"
+    android:layout_width="80dp"
     android:layout_height="match_parent"
     android:layout_marginEnd="10dp"
     android:layout_marginRight="10dp"
