adding some elevation, is nice

--- a/presentation/src/main/res/layout/basket_with_name.xml
+++ b/presentation/src/main/res/layout/basket_with_name.xml
@@ -5,6 +5,7 @@
   android:background="@drawable/basket_bg"
   android:gravity="center"
   android:minHeight="90dp"
+  android:elevation="2dp"
   android:orientation="vertical">
 
   <TextView
